data/derived/sp14/progs/unify/prog3319.ml.out
Characters 60-61:
  let fixpoint (f,b) = wwhile ((let f x = wwhile(f,x) in f b),b);;
                                                              ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a * bool
